libs/@local/hashql/ast/tests/ui/lower/type-extractor/definition/dict-parameter-count-mismatch-too-many.jsonc
//@ run: fail
//@ description: Tests List intrinsic with wrong parameter count
[
  "type",
  "TooManyDict",
  "Dict<String, Number, String>",
  //~^ ERROR Intrinsic `::kernel::type::Dict` takes 2 parameters, but found 3
  "_"
]
